--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Carlo Debernardi
 author: Carlo Debernardi
 
 # Short bio or description (displayed in the header)
-description: Nothing here still
+# description: Nothing here still
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/cd_profile_pic.jpg
