--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ footer-links:
   email: carlo.debernardi.w@gmail.com
   facebook:
   flickr:
-  github: https://github.com/carlodebernardi
+  github: carlodebernardi
   instagram:
   linkedin: 
   pinterest:
@@ -55,7 +55,7 @@ enforce_ssl: https://carlodebernardi.github.io/
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-# baseurl: 
+baseurl: https://carlodebernardi.github.io/about
 
 #
 # !! You don't need to change any of the configuration flags below !!
